fix(slice-v1-004): close frozen controller findings